# alib

./: .gitignore  CMakeLists.txt  config-cmake.h.in
include/: acom.h  alog.h  amem.h  aobj.h  astr.h  atomic.h  atomicvar.h  atypes.h  avl.h  dlnk.h  dynabuf.h  dynapool.h  dynastr.h  list.h  segarray.h  stream.h  strie.h  taggedpointer.h  threadlocal.h  utf8.h
include/alib/: acom.h  amem.h  atypes.h  config.h
include/alib/collections/list/: deque.h  dlnk.h  prique.h  segarray.h
include/alib/collections/map/: avl.h  rbtree.h  strie.h
include/alib/concurrent/: atomic.h  threadlocal.h
include/alib/io/: alog.h  stream.h
include/alib/memory/: dynapool.h  taggedpointer.h
include/alib/object/: aobj.h  dstr.h  list.h  pint.h
include/alib/string/: astr.h  dynabuf.h  utf8.h
include/std/: astr.h
src/: acom.c  amem.c  amem_win.cpp  aobj.c  astr.c  avl.c  dlnk.c  dynabuf.c  dynapool.c  dynastr.c  list.c  segarray.c  stream.c  strie.c  threadlocal.c  utf8.c
src/collections/list/: dlnk.c  prique.c  segarray.c
src/collections/map/: avl.c  rbtree.c  strie.c
src/concurrent/: atomic.c  threadlocal.c
src/io/: stream.c
src/memory/: dynapool.c
src/object/: aobj.c  dstr.c  list.c
src/std/: astr.c
src/string/: astr.c  dynabuf.c  utf8.c
